--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
     "main": "index.js",
     "license": "MIT",
     "scripts": {
-        "dev": "nuxt"
+        "dev": "nuxt",
+        "build": "nuxt build",
+        "start": "nuxt start"
     },
     "dependencies": {
         "axios": "^0.21.1",
         "cookieparser": "^0.1.0",
+        "dayjs": "^1.10.6",
         "js-cookie": "^2.2.1",
+        "markdown-it": "^12.1.0",
         "nuxt": "^2.15.7"
     }
 }
