--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     # 打包构建
     - name: Build
       uses: actions/setup-node@master
-    - run: yarn install
+    - run: yarn
     - run: yarn build
     - run: tar -zcvf release.tgz .nuxt static nuxt.config.js package.json package-lock.json
 
@@ -56,5 +56,5 @@ jobs:
           cd /root/realworld-nuxtjs
           wget https://github.com/lipengzhou/realworld-nuxtjs/releases/latest/download/release.tgz -O release.tgz
           tar zxvf release.tgz
-          yarn --production
+          yarn install --production
           pm2 reload pm2.config.json
