--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/setup-node@master
     - run: yarn
     - run: yarn build
-    - run: tar -zcvf release.tgz .nuxt static nuxt.config.js package.json package-lock.json
+    - run: tar -zcvf release.tgz .nuxt static nuxt.config.js package.json yarn.lock
 
     # 发布 Release
     - name: Create Release
